Fix margin on mobile

--- a/style.css
+++ b/style.css
@@ -163,6 +163,6 @@ button:hover svg {
   }
 
   .textarea {
-    margin-top: 48px;
+    margin-top: 20px;
   }
 }
